--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -8,7 +8,7 @@ metadata:
     system: gitlab
     lifecycle: production
   annotations:
-    gitlab.com/project-slug: 'ops-templates'
+    gitlab.com/project-id: '1203'
 spec:
   lifecycle: production
   owner: cicd
